# enum2schema

./: Cargo.toml  README.md
enum2schema_derive/: Cargo.toml  README.md
enum2schema_derive/src/: lib.rs
examples/: derive.rs  mcp_tool.rs
src/: lib.rs
tests/: schema.rs
