[package]
name = "enum2schema_derive"
version = "0.1.1"
authors = ["Matthew Berger <matthewjordanberger@gmail.com>"]
description = "Derive macro implementation for enum2schema."
homepage = "https://github.com/matthewjberger/enum2schema"
repository = "https://github.com/matthewjberger/enum2schema"
documentation = "https://docs.rs/enum2schema_derive"
readme = "README.md"
keywords = ["enum", "macro", "schema", "json-schema"]
categories = ["development-tools::procedural-macro-helpers"]
license = "MIT"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
